[gd_scene load_steps=3 format=3 uid="uid://0yunjxtaa8iw"]

[ext_resource type="Script" uid="uid://c4gmgdl1xwflw" path="res://addons/gut/gui/RunAtCursor.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://6wra5rxmfsrl" path="res://addons/gut/gui/arrow.png" id="3"]

[node name="RunAtCursor" type="Control"]
custom_minimum_size = Vector2(510, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = -527.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LblNoneSelected" type="Label" parent="HBox"]
visible = false
layout_mode = 2
text = "<None>"

[node name="BtnRunScript" type="Button" parent="HBox"]
layout_mode = 2
text = "test_test.gd"

[node name="Arrow1" type="TextureButton" parent="HBox"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
texture_normal = ExtResource("3")
stretch_mode = 3

[node name="BtnRunInnerClass" type="Button" parent="HBox"]
layout_mode = 2
tooltip_text = "Run all tests in Inner-Test-Class TestAssertNe"
text = "TestAssertNe"

[node name="Arrow2" type="TextureButton" parent="HBox"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
texture_normal = ExtResource("3")
stretch_mode = 3

[node name="BtnRunMethod" type="Button" parent="HBox"]
layout_mode = 2
tooltip_text = "Run test test_fails_with_integers_equal"
text = "test_fails_with_integers_equal"

[connection signal="pressed" from="HBox/BtnRunScript" to="." method="_on_BtnRunScript_pressed"]
[connection signal="pressed" from="HBox/BtnRunInnerClass" to="." method="_on_BtnRunInnerClass_pressed"]
[connection signal="pressed" from="HBox/BtnRunMethod" to="." method="_on_BtnRunMethod_pressed"]
